--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/wilsson/module-pattern-javascript/issues"
   },
-  "homepage": "https://github.com/wilsson/module-pattern-javascript"
+  "homepage": "https://github.com/wilsson/module-pattern-javascript",
+  "devDependencies": {
+    "express": "^4.13.3",
+    "jade": "^1.11.0"
+  }
 }
