--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/wilsson/module-pattern-javascript",
   "devDependencies": {
-    "express": "^4.13.3",
-    "jade": "^1.11.0"
+    "ejs": "^2.3.4",
+    "express": "^4.13.3"
   }
 }
